# task_tracker

./: .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: CI.yml
nginx/: nginx.conf
task_tracker/: settings.py  urls.py
tasks/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0003_alter_task_status.py
users/: admin.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
